test_case/rust-lang_rust/3598_37568035.rs
 rust
#[lang="covariant_type"]
#[deriving(Eq,Clone)]  // error: cannot determine a type for this expression: unconstrained type
pub struct CovariantType<T>;
